--- a/WeatherApp/WeatherApp/Resources/layout/activity_main.axml
+++ b/WeatherApp/WeatherApp/Resources/layout/activity_main.axml
@@ -1,7 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:minWidth="25px"
+	android:minHeight="25px">
+	<LinearLayout
+		android:orientation="vertical"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:id="@+id/linearLayout1">
+		<LinearLayout
+			android:orientation="horizontal"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:id="@+id/linearLayout2">
+			<android.support.design.widget.TextInputEditText
+				android:layout_width="wrap_content"
+				android:layout_height="match_parent"
+				android:id="@+id/input"
+				android:minWidth="600px" />
+			<Button
+				android:text="Search"
+				android:layout_width="wrap_content"
+				android:layout_height="match_parent"
+				android:id="@+id/search" />
+		</LinearLayout>
+		<LinearLayout
+			android:orientation="horizontal"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/linearLayout3">
+			<TextView
+					android:text="temperature"
+					android:textAppearance="?android:attr/textAppearanceLarge"
+					android:layout_width="wrap_content"
+					android:layout_height="match_parent"
+					android:id="@+id/temperature"
+					android:textAlignment="center"
+					android:layout_marginStart="180dp"/>
+		</LinearLayout>
+			<ImageView
+			android:src="@android:drawable/ic_menu_gallery"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/weatherIcon"
+			android:layout_marginRight="105.0dp" />
+		<LinearLayout
+			android:orientation="horizontal"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/linearLayout4">
+			<TextView
+				android:text="pressure"
+				android:textAppearance="?android:attr/textAppearanceLarge"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:id="@+id/pressure"/>
+			<TextView
+				android:text="windspeed"
+				android:textAppearance="?android:attr/textAppearanceLarge"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:id="@+id/windSpeed" />
+			
+			</linearLayout>
+	</LinearLayout>
+
 </RelativeLayout>
