--- a/WeatherApp/WeatherApp/Resources/layout/activity_main.axml
+++ b/WeatherApp/WeatherApp/Resources/layout/activity_main.axml
@@ -6,7 +6,8 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:minWidth="25px"
-	android:minHeight="25px">
+	android:minHeight="25px"
+	android:background="#ff90e5eb">
 	<LinearLayout
 		android:orientation="vertical"
 		android:minWidth="25px"
@@ -25,12 +26,14 @@
 				android:layout_width="wrap_content"
 				android:layout_height="match_parent"
 				android:id="@+id/input"
-				android:minWidth="600px" />
+				android:minWidth="600px"/>
 			<Button
 				android:text="Search"
 				android:layout_width="wrap_content"
 				android:layout_height="match_parent"
-				android:id="@+id/search" />
+				android:id="@+id/search"
+				android:background="#ffff3131"
+				android:textColor="#ff000000" />
 		</LinearLayout>
 		<LinearLayout
 			android:orientation="horizontal"
@@ -38,43 +41,89 @@
 			android:minHeight="25px"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:id="@+id/linearLayout3">
+			android:id="@+id/linearLayout3"
+			android:layout_gravity="center"
+			android:gravity="center"
+			android:foregroundGravity="center">
 			<TextView
-					android:text="temperature"
-					android:textAppearance="?android:attr/textAppearanceLarge"
-					android:layout_width="wrap_content"
-					android:layout_height="match_parent"
-					android:id="@+id/temperature"
-					android:textAlignment="center"
-					android:layout_marginStart="180dp"/>
+				android:text="temperature"
+				android:textAppearance="?android:attr/textAppearanceLarge"
+				android:layout_width="wrap_content"
+				android:layout_height="match_parent"
+				android:id="@+id/temperature"
+				android:textColor="#ff000000"
+				android:layout_gravity="center" />
 		</LinearLayout>
-			<ImageView
+		<LinearLayout
+			android:orientation="vertical"
+			android:minWidth="25px"
+			android:minHeight="25px"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/linearLayout42" >
+			<ProgressBar
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:id="@+id/progressBar" />
+		</LinearLayout>
+		<ImageView
 			android:src="@android:drawable/ic_menu_gallery"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:id="@+id/weatherIcon"
-			android:layout_marginRight="105.0dp" />
+			android:minWidth="500px"
+			android:minHeight="500px"
+			android:layout_gravity="center" />
 		<LinearLayout
 			android:orientation="horizontal"
 			android:minWidth="25px"
 			android:minHeight="25px"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:id="@+id/linearLayout4">
+			android:id="@+id/linearLayout40"
+			android:gravity="right"
+			android:layout_gravity="right"
+			android:foregroundGravity="right">
 			<TextView
 				android:text="pressure"
 				android:textAppearance="?android:attr/textAppearanceLarge"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:id="@+id/pressure"/>
+				android:id="@+id/pressure"
+				android:textColor="#ff000000" />
 			<TextView
 				android:text="windspeed"
 				android:textAppearance="?android:attr/textAppearanceLarge"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:id="@+id/windSpeed" />
-			
-			</linearLayout>
+				android:layout_marginLeft="225.0dp"
+				android:id="@+id/windSpeed"
+				android:textColor="#ff000000"
+				android:gravity="right"
+				android:foregroundGravity="right"
+				android:layout_gravity="right" />
+		</LinearLayout>
 	</LinearLayout>
-
+	<LinearLayout
+		android:orientation="horizontal"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_below="@id/linearLayout1"
+		android:id="@+id/linearLayout41" >
+		<TextView
+			android:text="Funded by:"
+			android:textAppearance="?android:attr/textAppearanceLarge"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/textView1"
+			android:textColor="#ff000000" />
+	</LinearLayout>
+	<ImageView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_below="@id/linearLayout41"
+		android:id="@+id/imageView1"
+		android:src="@drawable/develly" />
 </RelativeLayout>
